docs: update example notebook + self-contained python script #3

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,11 @@
     "                  ext_voffset=0,\n",
     "                  ext_hoffset=0,\n",
     "                  ax=barplot,\n",
-    "                  **kwargs)"
+    "                  **kwargs)\n",
+    "\n",
+    "\n",
+    "#plt.savefig(\"roc.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -685,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +717,10 @@
     "                             title=\"\",\n",
     "                             brier_score_annot=brier_annot,\n",
     "                             ax=ax\n",
-    "                             )"
+    "                             )\n",
+    "\n",
+    "#plt.savefig(\"calib.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
